<resources>
    <string name="app_name">DesafioFirebase</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="login">Log in</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="repeate_password">Repeate password</string>
    <string name="created_at">Created at</string>
    <string name="save_game">Save Game</string>
    <string name="description">Description</string>
    <string name="search_games">Search Games</string>
    <string name="lancamento">Lançamento:</string>
    <string name="edit">Edit</string>
    <string name="add_game">Add Game</string>
    <string name="msg_list_empty">No game registered.</string>
</resources>